--- a/CinePicker/Common/Components/MovieCollectionCollectionViewCell.xib
+++ b/CinePicker/Common/Components/MovieCollectionCollectionViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,31 +10,31 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MovieCollectionCollectionViewCell" customModule="CinePicker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="95" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="90" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="95" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="90" height="120"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HqL-9v-tcH" userLabel="Content View">
-                        <rect key="frame" x="0.0" y="0.0" width="95" height="120"/>
+                        <rect key="frame" x="0.0" y="0.0" width="90" height="120"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_movie_image" translatesAutoresizingMaskIntoConstraints="NO" id="5p1-Lo-WPw">
-                                <rect key="frame" x="11.5" y="12" width="72" height="96"/>
+                                <rect key="frame" x="0.0" y="12" width="68.5" height="96"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="5p1-Lo-WPw" secondAttribute="height" multiplier="3:4" id="61Y-68-2hF"/>
+                                    <constraint firstAttribute="width" secondItem="5p1-Lo-WPw" secondAttribute="height" multiplier="57:80" id="61Y-68-2hF"/>
                                 </constraints>
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="WyX-84-jJY">
-                                <rect key="frame" x="37.5" y="50" width="20" height="20"/>
+                                <rect key="frame" x="24" y="50" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="WyX-84-jJY" firstAttribute="centerY" secondItem="HqL-9v-tcH" secondAttribute="centerY" id="6qe-ik-gan"/>
                             <constraint firstItem="5p1-Lo-WPw" firstAttribute="top" secondItem="HqL-9v-tcH" secondAttribute="top" constant="12" id="J0i-Pu-1lo"/>
-                            <constraint firstItem="WyX-84-jJY" firstAttribute="centerX" secondItem="HqL-9v-tcH" secondAttribute="centerX" id="KqR-sd-Dhq"/>
+                            <constraint firstItem="5p1-Lo-WPw" firstAttribute="leading" secondItem="HqL-9v-tcH" secondAttribute="leading" id="afn-7A-pPg"/>
                             <constraint firstAttribute="bottom" secondItem="5p1-Lo-WPw" secondAttribute="bottom" constant="12" id="e0I-8q-nJX"/>
-                            <constraint firstItem="5p1-Lo-WPw" firstAttribute="centerX" secondItem="HqL-9v-tcH" secondAttribute="centerX" id="luO-nN-FUG"/>
+                            <constraint firstItem="WyX-84-jJY" firstAttribute="leading" secondItem="HqL-9v-tcH" secondAttribute="leading" constant="24" id="tKn-OE-J55"/>
                         </constraints>
                     </view>
                 </subviews>
